i linked html file with css

--- a/Broke-games/Home.html
+++ b/Broke-games/Home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="Home.css">
+    </head>
 
     <body>
         <div id="navbar">
@@ -10,9 +12,6 @@
         </div>
 
         
-        <div>
-            
-        </div>
 
     </body>
 </html>
