improved nav bar more

--- a/Broke-games/Home.html
+++ b/Broke-games/Home.html
@@ -6,7 +6,7 @@
 
     <body>
         <div id="navbar">
-            <a href=#Home> Home</a>
+            <a href=#Home id="selected-nav"> Home</a>
             <a href=#Contacts> contacts</a>
             <a href=#Other> Other</a>
         </div>
